[package]
name = "trillium-ructe"
version = "0.4.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"
description = "ructe templates for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/prabirshrestha/trillium-ructe"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
ructe = "0.17.0"
trillium = "0.2.8"
